syntax = "proto3";

package orders;

option go_package = "genproto/orders";

message Dish {
  string id = 1;
  string kitchen_id = 2;
  string name = 3;
  string description = 4;
  float price = 5;
  string category = 6;
  repeated string ingredients = 7;
  bool available = 8;
  string created_at = 9;
  string updated_at = 10;
}

message Order {
  string id = 1;
  string user_id = 2;
  string kitchen_id = 3;
  string items = 4;
  float total_amount = 5;
  string delivery_address = 6;
  string delivery_time = 7;
  string created_at = 8;
  string updated_at = 9;
}

message Payment {
  string id = 1;
  string order_id = 2;
  string user_id = 3;
  float amount = 4;
  string payment_method = 5;
  string payment_status = 6;
  string created_at = 7;
  string updated_at = 8;
}

// Sharhlarni ko'rish so'rovi va javobi
message GetReviewsRequest {
  string kitchen_id = 1;
  int32 offset = 2;
  int32 limit = 3;
}

message GetReviewsResponse {
  repeated Review reviews = 1;
  int32 total = 2;
  float average_rating = 3;
  int32 offset = 4;
  int32 limit = 5;
}

// Baholash modeli
message Review {
  string id = 1;
  string order_id = 2;
  string user_id = 3;
  string kitchen_id = 4;
  float rating = 5;
  string comment = 6;
  string created_at = 7;
  string updated_at = 8;
  string deleted_at = 9;
}

message GetDishesRequest {
  string kitchen_id = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message GetDishesResponse {
  repeated Dish dishes = 1;
}

message CreateDishRequest {
  string kitchen_id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
  string category = 5;
  repeated string ingredients = 6;
  bool available = 7;
}

message UpdateDishRequest {
  string id = 1;
  string name = 2;
  float price = 3;
  bool available = 4;
  string description = 5;
  repeated string ingredients = 6;
  string category = 7;
}

message DeleteDishRequest {
  string id = 1;
}

message CreateOrderRequest {
  string user_id = 1;
  string kitchen_id = 2;
  string items = 3;
  float total_amount = 4;
  string delivery_address = 5;
  string delivery_time = 6;
}

message CreateOrderResponse {
  Order order = 1;
}

message GetUserOrdersRequest {
  string user_id = 1;
}

message GetUserOrdersResponse {
  repeated Order orders = 1;
}

message UpdateOrderStatusRequest {
  string id = 1;
  string status = 2;
}

message GetKitchenOrdersRequest {
  string kitchen_id = 1;
  string status = 2;
  int32 limit = 3;
  int32 offset = 4;
}

message GetKitchenOrdersResponse {
  repeated Order orders = 1;
}

message GetOrderByIDRequest {
  string id = 1;
}

message GetOrderByIDResponse {
  Order order = 1;
}

message CreatePaymentRequest {
  string order_id = 1;
  string user_id = 2;
  float amount = 3;
  string payment_method = 4;
  string card_number = 5;
  string expiry_date = 6;
  string cvv = 7;
}

message GetPaymentsRequest {
  string order_id = 1;
}

message GetPaymentsResponse {
  repeated Payment payments = 1;
}

message Status {
  bool status = 1;
}

message GetDishRequest {
  string dish_id = 1;
}

service OrderService {
  rpc GetDishes (GetDishesRequest) returns (GetDishesResponse);
  rpc GetDish (GetDishRequest) returns (Dish);
  rpc CreateDish (CreateDishRequest) returns (Dish);
  rpc UpdateDish (UpdateDishRequest) returns (Dish);
  rpc DeleteDish (DeleteDishRequest) returns (Status);
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetUserOrders (GetUserOrdersRequest) returns (GetUserOrdersResponse);
  rpc UpdateOrderStatus (UpdateOrderStatusRequest) returns (Status);
  rpc GetKitchenOrders (GetKitchenOrdersRequest) returns (GetKitchenOrdersResponse);
  rpc GetOrderByID (GetOrderByIDRequest) returns (GetOrderByIDResponse);
  rpc CreatePayment (CreatePaymentRequest) returns (Payment);
  rpc GetPayments (GetPaymentsRequest) returns (GetPaymentsResponse);

  rpc CreateReview(Review) returns (Review);
  rpc GetReviews(GetReviewsRequest) returns (GetReviewsResponse);
  rpc UpdateReview(Review) returns (Status);
  rpc DeleteReview(Review) returns (Status);
}
